# hive-metastore-cli

./: .gitignore  Cargo.toml  README.md  gen_thrift.sh
examples/: simple.rs
hive-metastore-cli/: Cargo.toml
hive-metastore-cli/examples/: simple.rs
hive-metastore-cli/src/: lib.rs
hive-metastore-rest/: Cargo.toml  config-example.toml
hive-metastore-rest/src/: config.rs  main.rs
src/: fb303.rs  hive_metastore.rs  lib.rs  models.rs
thrift/: hive_metastore.thrift
